With v-on and computed

--- a/tryVue.html
+++ b/tryVue.html
@@ -22,6 +22,7 @@
     <script>
         //let变量/const常量
         const app = new Vue({
+            //切记，这个el:决定这个Vue是定义给哪个元素的！！！！
             el:'#app',//用于挂载要管理的元素
             data:{ //定义数据
                 message:'hello Donuts!',
