+全局/局部组件化 + 父子组件终极

--- a/09-组件化开发/01-组件化得基本使用.html
+++ b/09-组件化开发/01-组件化得基本使用.html
@@ -23,7 +23,7 @@
       </div>
 `})
 
-  // 2.注册组件
+  // 2.注册组件 (这里是全局组件，就是所有vue对象都能使用)
   Vue.component('my-cpn',cpnC);
   const app = new Vue ({
     el:'#app',
