--- a/05-条件判断/06-v-show的使用.html
+++ b/05-条件判断/06-v-show的使用.html
@@ -7,7 +7,7 @@
 <body>
 <div id="app">
 <!--  v-if:当条件为false时,包含v-if指令的元素,根本不会存在dom中
-      v-show:当条件weifalse时,包含v-show指令的元素,会增加一个display:none的样式-->
+      v-show:当条件为false时,包含v-show指令的元素,会增加一个display:none的样式-->
 
 <!--  当需要在显示与隐藏之间切片频繁时,使用v-show
       当只有一次切换时,通过使用v-if-->
