--- a/06-循环遍历/04-哪些数组的方法是响应式的.html
+++ b/06-循环遍历/04-哪些数组的方法是响应式的.html
@@ -14,6 +14,17 @@
 
 <script src="../js/vue.js"></script>
 <script>
+  // 1.push()
+  // 2.pop()
+  // 3.shift()
+  // 4.unshift()
+  // 5.splice() :删除元素/插入元素/替换元素
+  //    第一个参数，表示从第几个开始算（包括这个元素）
+  //    删除元素：第二个参数传入要删除几个元素（如不传则后面全删）
+  //    替换元素：第二个参数，表示要替换的几个元素，的参数是表示替换前面的元素
+  //    插入元素：第二个参数，传入0，并且后面跟上要插入的元素
+  // 6.sort()
+  // .7reverse ()
   const app = new Vue ({
     el:'#app',
     data:{
