--- a/04-事件监听/02-v-on的参数问题.html
+++ b/04-事件监听/02-v-on的参数问题.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="app">
-<!--  1.事件调用的方法没有参数(有或无加入小括号),无区别-->
+<!--  1.事件调用的方法没有形参时，有或无加入小括号,无区别-->
   <button @click="btnClick()">btn1</button>
   <button @click="btnClick">btn2</button>
 
