--- a/09-组件化开发/09-子组件向父组件传递数据.html
+++ b/09-组件化开发/09-子组件向父组件传递数据.html
@@ -35,7 +35,7 @@
           ]
         }
       },
-      // 1.  当子组件有需要将数据发送给父组件时，在methods中 发射一个事件this.$emit（），
+      // 1.  当子组件有需要将数据发送给父组件时，在methods中 用this.$emit（）方法发射一个事件，
       // 事件的类型需要自定义，下面例子是'item_click'
       methods:{
         btn_click(item) {
